# D.-Simulator

./: .gitignore  ER_model.drawio  ER_to_relational.drawio  README.md  Untitled Diagram.drawio  pyproject.toml  tox.ini
docs/: Presentation.pptx  relational_model.drawio
docs/complex_queries/: dijkstra.cpp  kill_sequence.sql  path.sql
docs/database_design/: database_design.tex  generate_diagram.sh  schemacrawler.config.properties
dsimulator/: DDL.sql  Untitled Diagram.drawio  __init__.py  __main__.py  definitions.py  defs.py  game.py  generator.py  init_loc_time.sql  kill_sequence.sql  kill_trigger.sql  procedure_function.sql  query_loc_time.sql  shortest_path.sql  victim_common_attribute.sql
dsimulator/ui/: game.py  load.py  main.py  save.py
tests/: inhabitant.py  test_game.py  test_generate.py
