[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'dsimulator'
version = '0.0.1'
authors = [
    { name='Yuxiang Lin', email='yuxiang.lin@dukekunshan.edu.cn' },
    { name='Shanruo Xu', email='shanruo.xu@dukekunshan.edu.cn' },
    { name='Isaac Yang', email='isaac.yang@dukekunshan.edu.cn' },
]
description = 'A detective simulation game'
readme = 'README.md'
requires-python = '>=3.8'
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
]
dependencies = [
	'dearpygui>=1.10.1',
	'numpy>=1.26.2',
	'faker>=20.1.0',
]

[project.scripts]
dsimulator = 'dsimulator.__main__:main'

[project.urls]
Homepage = 'https://github.com/chikubidestroyer/D.-Simulator'
Issues = 'https://github.com/chikubidestroyer/D.-Simulator/issues'
